core: decode Array/Nested columns as plain List, not client-v2 internal type
Adds ListDecodingRowBinaryReader, a small subclass of client-v2's public
RowBinaryWithNamesAndTypesFormatReader that overrides its protected
readRecord(Object[]) hook (exposed specifically for subclassing) to
supply a List.class type hint for Array/Nested columns only. client-v2's
BinaryStreamReader.convertArray() already knows how to honor that hint
and return a plain List instead of the .internal ArrayValue it returns
by default (the public next()/readRecord() path never supplied a hint
before this). Every other column type is decoded exactly as before.

Same shape of deliberate, narrow, documented .internal dependency as
Phase 0's InputStream bridge decision - not a general one.

- core: RowBinaryDecoder now builds a ListDecodingRowBinaryReader.
- core test: RowBinaryFixtures gets a hand-built Array(Int32) wire
  fixture; RowBinaryDecoderTest proves the List decoding hermetically,
  no ClickHouse needed.
- transport-http test: RealWorldTableAgainstRealClickHouseTest gets
  shouldDecodeArrayType against real ClickHouse.
- ROADMAP.md: Composite category now covered for Array (Map/Tuple were
  already fine); Nested flagged as same-mechanism, test-only follow-up.